Templated the calculations for Q5

--- a/Q5.ipynb
+++ b/Q5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "9593f34c",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
     "from copy import deepcopy\n",
     "from checklist.editor import Editor\n",
     "from checklist.perturb import Perturb\n",
-    "from sklearn.metrics import f1_score, precision_score, recall_score, classification_report, confusion_matrix\n",
+    "from sklearn.metrics import precision_score, recall_score\n",
     "np.random.seed(42)"
    ]
   },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd8a4b29",
+   "id": "21659d1f",
    "metadata": {},
    "source": [
     "### We got the predictions on Google colab because it wouldn't work locally due to GPU and CUDA issues. We load those predictions in..."
@@ -66,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "27b085d0",
+   "execution_count": 47,
+   "id": "edd38a68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baac3bdc",
+   "id": "dda2b8b8",
    "metadata": {},
    "source": [
     "## Precision Scores"
@@ -91,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "d0b737ff",
+   "execution_count": 48,
+   "id": "45e155f1",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "0.9459459459459459"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c31efa99",
+   "id": "03f59df3",
    "metadata": {},
    "outputs": [
     {
@@ -134,243 +134,107 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "6cd0fd24",
+   "cell_type": "markdown",
+   "id": "2c9600e1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "list(y_pred) == list(y_pred_typos)"
+    "## Recall Scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "55d871e2",
+   "execution_count": 39,
+   "id": "5f8fa90b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     1\n",
-       "1     0\n",
-       "2     1\n",
-       "3     0\n",
-       "4     1\n",
-       "     ..\n",
-       "95    0\n",
-       "96    0\n",
-       "97    0\n",
-       "98    0\n",
-       "99    0\n",
-       "Name: Predictions, Length: 100, dtype: int64"
+       "0.7"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred"
+    "# No Typos\n",
+    "recall_score(y_true=y_true, y_pred=y_pred, pos_label=pos_label)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "afc98e55",
+   "execution_count": 40,
+   "id": "f17635e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     1\n",
-       "1     0\n",
-       "2     1\n",
-       "3     0\n",
-       "4     1\n",
-       "     ..\n",
-       "95    0\n",
-       "96    0\n",
-       "97    0\n",
-       "98    0\n",
-       "99    0\n",
-       "Name: Predictions, Length: 100, dtype: int64"
+       "0.7"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred_typos"
+    "# Typos\n",
+    "recall_score(y_true=y_true, y_pred=y_pred_typos, pos_label=pos_label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "862d85d4",
+   "metadata": {},
+   "source": [
+    "## F1 Scores (Macro)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "9ceb9182",
+   "execution_count": 43,
+   "id": "6c2be96a",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>text</th>\n",
-       "      <th>labels</th>\n",
-       "      <th>Predictions</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>89200</td>\n",
-       "      <td>@USER @USER Who the hell does he think hei s?</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>71294</td>\n",
-       "      <td>#BREAKING. #Greece: Molotov cocktails fly afte...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>55633</td>\n",
-       "      <td>#OrrinHatch I can’t believe this sexist  ,clue...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>16856</td>\n",
-       "      <td>@USER @USER I'll use that oen the next time im...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>26072</td>\n",
-       "      <td>0-1 lots my acca on the first fucking fight cba</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>45518</td>\n",
-       "      <td>U@SER He is obviously getting suspended. He is...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>51610</td>\n",
-       "      <td>#Canada - EXCLUSIV:E #Trudeau #Liberals leave ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>26758</td>\n",
-       "      <td>@SUER @USER ...than why did you show us how ho...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>30718</td>\n",
-       "      <td>@USER @USER @USER You have yet to answer what ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>82558</td>\n",
-       "      <td>#MAGA  ... got any ideas how she could haved o...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 4 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       id                                               text  labels  \\\n",
-       "0   89200      @USER @USER Who the hell does he think hei s?       1   \n",
-       "1   71294  #BREAKING. #Greece: Molotov cocktails fly afte...       1   \n",
-       "2   55633  #OrrinHatch I can’t believe this sexist  ,clue...       1   \n",
-       "3   16856  @USER @USER I'll use that oen the next time im...       1   \n",
-       "4   26072    0-1 lots my acca on the first fucking fight cba       1   \n",
-       "..    ...                                                ...     ...   \n",
-       "95  45518  U@SER He is obviously getting suspended. He is...       0   \n",
-       "96  51610  #Canada - EXCLUSIV:E #Trudeau #Liberals leave ...       0   \n",
-       "97  26758  @SUER @USER ...than why did you show us how ho...       0   \n",
-       "98  30718  @USER @USER @USER You have yet to answer what ...       0   \n",
-       "99  82558  #MAGA  ... got any ideas how she could haved o...       0   \n",
-       "\n",
-       "    Predictions  \n",
-       "0             1  \n",
-       "1             0  \n",
-       "2             1  \n",
-       "3             0  \n",
-       "4             1  \n",
-       "..          ...  \n",
-       "95            0  \n",
-       "96            0  \n",
-       "97            0  \n",
-       "98            0  \n",
-       "99            0  \n",
-       "\n",
-       "[100 rows x 4 columns]"
+       "0.8270776116366596"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predictions_typos"
+    "# No Typos\n",
+    "f1_score(y_true=y_true, y_pred=y_pred, pos_label=pos_label, average='macro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8fede6ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8270776116366596"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Typos\n",
+    "f1_score(y_true=y_true, y_pred=y_pred_typos, pos_label=pos_label, average='macro')"
    ]
   }
  ],
